@@ -10,9 +10,10 @@ SimpleComplex/Database 3.x, 2020-07-14
 
 SimpleComplex/Database 3.x, 2020-07-13
 --------------------------------------
+- MariaDb simple query fetch typed ints and floats; client option
+  (0|1) result_typed_numbers.
 - DbQuery::setValidateParams() to alter validateParams option upon
   instantiation.
-- MariaDb simple query fetch typed ints and floats.
 
 SimpleComplex/Database 3.x, 2020-07-08
 --------------------------------------
